Project

General

Profile

Actions

Bug #38009

closed

client: session flush does not cause cap release message flush

Added by Patrick Donnelly over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
Performance/Resource Usage
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When the client receives CEPH_SESSION_FLUSHMSG, it simply sends an ACK back to the MDS. At least for the cache drop use-case, we expect that cap recall is processed and that cap release messages have been sent. So, flush the cap release message (which releases in batch) prior to sending the CEPH_SESSION_FLUSHMSG_ACK.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #38103: mimic: client: session flush does not cause cap release message flushResolvedNathan CutlerActions
Copied to CephFS - Backport #38104: luminous: client: session flush does not cause cap release message flushResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 26082
Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38103: mimic: client: session flush does not cause cap release message flush added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38104: luminous: client: session flush does not cause cap release message flush added
Actions #5

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF